crates/strider-analyze/tests/snapshots/mips32le__floats__main.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x400810:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x400830:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v8" [label="Post Call\na0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "5" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x400850:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\na0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x400858:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v16" [label="Post Call\na0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "13" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x400860:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x40086c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x400000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "21" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x400878:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x400000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "25" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x40089c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x400000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "29" -> "33" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x4008c0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v36" [label="Post Call\na0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v36" [color="#888888", style=dashed];
  "v36" -> "33" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "37" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "33" -> "37" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "40" -> "37" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "41" -> "37" [color="#88cc88", label=f0_1, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v42" [color="#888888", style=dashed];
  "v42" -> "37" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "41" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="FloatToInt\nf32 → u32", shape=box, fillcolor="#302018"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "49" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v50" [label="Post Call\nf0_1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v50" [color="#888888", style=dashed];
  "v50" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "51" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xffffffff00000000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v50" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "33" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "33" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "29" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v59" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v59" [color="#888888", style=dashed];
  "v59" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "29" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "25" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v63" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v63" [color="#888888", style=dashed];
  "v63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "21" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v67" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v67" [color="#888888", style=dashed];
  "v67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "17" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "69" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "70" [label="FloatToInt\nf32 → u32", shape=box, fillcolor="#302018"];
  "72" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "73" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v74" [label="Post Call\nf0_1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v74" [color="#888888", style=dashed];
  "v74" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "13" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "76" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "78" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "77" [label="FloatToInt\nf32 → u32", shape=box, fillcolor="#302018"];
  "79" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "80" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v81" [label="Post Call\nf0_1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v81" [color="#888888", style=dashed];
  "v81" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "9" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "85" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "85" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "84" [label="FloatToInt\nf64 → u32", shape=box, fillcolor="#302018"];
  "86" -> "84" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "86" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "v87" [label="Post Call\nf0_1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v87" [color="#888888", style=dashed];
  "v87" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "5" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v88" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v88" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "89" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "89" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "90" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "5" -> "91" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "91" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "90" [label="FloatToInt\nf64 → u32", shape=box, fillcolor="#302018"];
  "92" -> "90" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "92" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "v93" [label="Post Call\nf0_1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v93" [color="#888888", style=dashed];
  "v93" -> "92" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v94" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v94" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "95" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "95" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "96" -> "95" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "97" -> "95" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "97" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "97" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "97" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "96" [label="FloatToInt\nf32 → u32", shape=box, fillcolor="#302018"];
  "98" -> "96" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "98" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "99" -> "98" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "99" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v100" [label="Post Call\nf0_1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v100" [color="#888888", style=dashed];
  "v100" -> "99" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "101" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v102" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v102" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "103" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "103" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "101" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "104" -> "101" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v105" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v105" -> "101" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "106" -> "101" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "106" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "104" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
